Create a skeleton ClientApp object to model a client application

--- a/app/views/cluster.scala.html
+++ b/app/views/cluster.scala.html
@@ -58,7 +58,7 @@
             <td>@node.address</td>
             <td>@node.leader</td>
             <td>@node.uid</td>
-            <td>@node.roles</td>
+            <td>@node.roles.mkString(",")</td>
             <td>@node.status</td>
             <td>@node.dc</td>
             <td>
