Implement client-broker connection protocol

--- a/app/views/clients.scala.html
+++ b/app/views/clients.scala.html
@@ -2,7 +2,7 @@
 
 @(clients: Iterable[ClientInfo])
 
-@main("Akka-Hub-Client: clients", "Client Connections"){
+@main_client("Akka-Hub: clients", "Client Connections"){
 <div>
 
     <label>New client:</label>
