--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -30,7 +30,7 @@
         <option value="localhost:9005">Broker5</option>
     </select>
     &nbsp;
-    <a href="/endpoints">connections</a> |
+    <a href="/endpoints">endpoints</a> |
     <a href="/links">links</a> |
     <a href="/cluster">cluster</a>
 </nav>
